// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`mediaCard minimal (plain box, no action) 1`] = `
{
  "children": [
    {
      "src": "https://img.example/m.png",
      "type": "Image",
    },
  ],
  "maxWidth": 280,
  "radius": "lg",
  "type": "Box",
}
`;

exports[`mediaCard with mediaId derives the press action 1`] = `
{
  "children": [
    {
      "children": [
        {
          "src": "https://img.example/m.png",
          "type": "Image",
        },
      ],
      "maxWidth": 280,
      "radius": "lg",
      "type": "Box",
    },
  ],
  "onClickAction": {
    "payload": {
      "mediaId": "m1",
    },
    "type": "chat.media.press",
  },
  "type": "ListViewItem",
}
`;

exports[`mediaCard full with explicit clickAction and width 1`] = `
{
  "children": [
    {
      "children": [
        {
          "src": "https://img.example/m.png",
          "type": "Image",
        },
      ],
      "maxWidth": 320,
      "radius": "lg",
      "type": "Box",
    },
  ],
  "onClickAction": {
    "payload": {
      "k": "v",
    },
    "type": "custom.press",
  },
  "type": "ListViewItem",
}
`;

exports[`emojiReactionRow minimal 1`] = `
{
  "align": "center",
  "children": [
    {
      "fontSize": 30,
      "label": "👍",
      "onClickAction": {
        "payload": {
          "emoji": "👍",
        },
        "type": "chat.reaction.emojiPress",
      },
      "paddingX": 0,
      "paddingY": 0,
      "type": "Button",
      "variant": "ghost",
    },
    {
      "fontSize": 30,
      "label": "❤️",
      "onClickAction": {
        "payload": {
          "emoji": "❤️",
        },
        "type": "chat.reaction.emojiPress",
      },
      "paddingX": 0,
      "paddingY": 0,
      "type": "Button",
      "variant": "ghost",
    },
  ],
  "justify": "around",
  "padding": {
    "bottom": 8,
  },
  "type": "Row",
}
`;

exports[`emojiReactionRow full 1`] = `
{
  "align": "center",
  "children": [
    {
      "fontSize": 30,
      "label": "🔥",
      "onClickAction": {
        "payload": {
          "emoji": "🔥",
        },
        "type": "custom.emoji",
      },
      "paddingX": 0,
      "paddingY": 0,
      "type": "Button",
      "variant": "ghost",
    },
  ],
  "justify": "around",
  "padding": {
    "bottom": 8,
  },
  "type": "Row",
}
`;

exports[`highlightText minimal 1`] = `
{
  "align": "baseline",
  "children": [
    {
      "type": "Text",
      "value": "plain text",
    },
  ],
  "type": "Row",
  "wrap": "wrap",
}
`;

exports[`highlightText full 1`] = `
{
  "align": "baseline",
  "children": [
    {
      "color": "secondary",
      "fontSize": 14,
      "lineHeight": 18,
      "size": "sm",
      "type": "Text",
      "value": "find the ",
    },
    {
      "background": "#fff200",
      "color": "secondary",
      "fontSize": 14,
      "lineHeight": 18,
      "size": "sm",
      "type": "Text",
      "value": "Needle",
    },
    {
      "color": "secondary",
      "fontSize": 14,
      "lineHeight": 18,
      "size": "sm",
      "type": "Text",
      "value": " here",
    },
  ],
  "type": "Row",
  "wrap": "wrap",
}
`;

exports[`previewLinkCard minimal 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "truncate": true,
              "type": "Text",
              "value": "Example",
              "weight": "semibold",
            },
          ],
          "gap": 2,
          "padding": {
            "x": 12,
            "y": 10,
          },
          "type": "Col",
        },
      ],
      "gap": 0,
      "radius": "lg",
      "type": "Col",
    },
  ],
  "onClickAction": {
    "payload": {
      "url": "https://example.com",
    },
    "type": "link.open",
  },
  "type": "ListViewItem",
}
`;

exports[`previewLinkCard full 1`] = `
{
  "children": [
    {
      "children": [
        {
          "fit": "cover",
          "maxHeight": 160,
          "radius": "md",
          "src": "https://img.example/preview.png",
          "type": "Image",
        },
        {
          "children": [
            {
              "truncate": true,
              "type": "Text",
              "value": "Example",
              "weight": "semibold",
            },
            {
              "color": "secondary",
              "maxLines": 2,
              "type": "Caption",
              "value": "An example site",
            },
          ],
          "gap": 2,
          "padding": {
            "x": 12,
            "y": 10,
          },
          "type": "Col",
        },
      ],
      "gap": 0,
      "radius": "lg",
      "type": "Col",
    },
  ],
  "onClickAction": {
    "payload": {
      "url": "https://example.com",
    },
    "type": "link.open",
  },
  "type": "ListViewItem",
}
`;

exports[`conversationHeader minimal 1`] = `
{
  "align": "center",
  "children": [
    {
      "align": "center",
      "children": [
        {
          "align": "center",
          "children": [
            {
              "children": [
                {
                  "size": "4xl",
                  "truncate": true,
                  "type": "Text",
                  "value": "Alice",
                  "weight": "semibold",
                },
              ],
              "flex": 1,
              "gap": 2,
              "type": "Col",
            },
          ],
          "flex": 1,
          "gap": 10,
          "type": "Row",
        },
      ],
      "onClickAction": {
        "payload": {
          "conversationId": undefined,
        },
        "type": "chat.conversation.press",
      },
      "type": "ListViewItem",
    },
  ],
  "gap": 8,
  "type": "Row",
}
`;

exports[`conversationHeader full 1`] = `
{
  "align": "center",
  "children": [
    {
      "align": "center",
      "children": [
        {
          "align": "center",
          "children": [
            {
              "radius": "md",
              "size": 24,
              "src": "https://img.example/a.png",
              "type": "Image",
            },
            {
              "children": [
                {
                  "size": "4xl",
                  "truncate": true,
                  "type": "Text",
                  "value": "DAO Ops",
                  "weight": "semibold",
                },
              ],
              "flex": 1,
              "gap": 2,
              "type": "Col",
            },
          ],
          "flex": 1,
          "gap": 10,
          "type": "Row",
        },
      ],
      "onClickAction": {
        "payload": {
          "conversationId": "conv-1",
        },
        "type": "chat.conversation.press",
      },
      "type": "ListViewItem",
    },
  ],
  "gap": 8,
  "type": "Row",
}
`;

exports[`pollCard minimal 1`] = `
{
  "children": [
    {
      "children": [
        {
          "size": "3xl",
          "type": "Text",
          "value": "Ship it?",
          "weight": "semibold",
        },
        {
          "children": [
            {
              "border": {
                "color": "transparent",
                "size": 1,
              },
              "inset": 0,
              "radius": "lg",
              "type": "Box",
            },
            {
              "background": "transparent",
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "radius": "lg",
              "top": 0,
              "type": "Box",
              "width": "75%",
            },
            {
              "align": "center",
              "children": [
                {
                  "children": [
                    {
                      "truncate": true,
                      "type": "Text",
                      "value": "Yes",
                    },
                  ],
                  "flex": 1,
                  "type": "Col",
                },
                {
                  "color": "secondary",
                  "type": "Caption",
                  "value": "75% · 3",
                  "weight": "semibold",
                },
              ],
              "gap": 8,
              "justify": "between",
              "padding": {
                "x": 12,
                "y": 8,
              },
              "type": "Row",
            },
          ],
          "type": "Stack",
        },
        {
          "children": [
            {
              "border": {
                "color": "transparent",
                "size": 1,
              },
              "inset": 0,
              "radius": "lg",
              "type": "Box",
            },
            {
              "background": "transparent",
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "radius": "lg",
              "top": 0,
              "type": "Box",
              "width": "25%",
            },
            {
              "align": "center",
              "children": [
                {
                  "children": [
                    {
                      "truncate": true,
                      "type": "Text",
                      "value": "No",
                    },
                  ],
                  "flex": 1,
                  "type": "Col",
                },
                {
                  "color": "secondary",
                  "type": "Caption",
                  "value": "25% · 1",
                  "weight": "semibold",
                },
              ],
              "gap": 8,
              "justify": "between",
              "padding": {
                "x": 12,
                "y": 8,
              },
              "type": "Row",
            },
          ],
          "type": "Stack",
        },
        {
          "color": "secondary",
          "type": "Caption",
          "value": "4 votes",
        },
      ],
      "gap": 6,
      "type": "Col",
    },
  ],
  "gap": 12,
  "type": "Col",
}
`;

exports[`pollCard full 1`] = `
{
  "children": [
    {
      "children": [
        {
          "size": "3xl",
          "type": "Text",
          "value": "Pick toppings",
          "weight": "semibold",
        },
        {
          "color": "secondary",
          "type": "Caption",
          "value": "Lunch poll · multi-select",
          "weight": "semibold",
        },
        {
          "children": [
            {
              "children": [
                {
                  "background": "#d0ffd0",
                  "border": {
                    "color": "#00aa00",
                    "size": 1,
                  },
                  "inset": 0,
                  "radius": "lg",
                  "type": "Box",
                },
                {
                  "background": "#e0e0ff",
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "radius": "lg",
                  "top": 0,
                  "type": "Box",
                  "width": "100%",
                },
                {
                  "align": "center",
                  "children": [
                    {
                      "children": [
                        {
                          "truncate": true,
                          "type": "Text",
                          "value": "✓ Cheese",
                        },
                      ],
                      "flex": 1,
                      "type": "Col",
                    },
                    {
                      "color": "secondary",
                      "type": "Caption",
                      "value": "100% · 1",
                      "weight": "semibold",
                    },
                  ],
                  "gap": 8,
                  "justify": "between",
                  "padding": {
                    "x": 12,
                    "y": 8,
                  },
                  "type": "Row",
                },
              ],
              "type": "Stack",
            },
          ],
          "onClickAction": {
            "payload": {
              "optionIndex": 0,
              "questionIndex": 0,
              "selected": true,
            },
            "type": "chat.poll.optionPress",
          },
          "type": "Pressable",
        },
        {
          "children": [
            {
              "children": [
                {
                  "border": {
                    "color": "#cccccc",
                    "size": 1,
                  },
                  "inset": 0,
                  "radius": "lg",
                  "type": "Box",
                },
                {
                  "background": "#e0e0ff",
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "radius": "lg",
                  "top": 0,
                  "type": "Box",
                  "width": "0%",
                },
                {
                  "align": "center",
                  "children": [
                    {
                      "children": [
                        {
                          "truncate": true,
                          "type": "Text",
                          "value": "☐ Olives",
                        },
                      ],
                      "flex": 1,
                      "type": "Col",
                    },
                    {
                      "color": "secondary",
                      "type": "Caption",
                      "value": "0% · 0",
                      "weight": "semibold",
                    },
                  ],
                  "gap": 8,
                  "justify": "between",
                  "padding": {
                    "x": 12,
                    "y": 8,
                  },
                  "type": "Row",
                },
              ],
              "type": "Stack",
            },
          ],
          "onClickAction": {
            "payload": {
              "optionIndex": 1,
              "questionIndex": 0,
              "selected": false,
            },
            "type": "chat.poll.optionPress",
          },
          "type": "Pressable",
        },
        {
          "color": "secondary",
          "type": "Caption",
          "value": "1 vote",
        },
      ],
      "gap": 6,
      "type": "Col",
    },
  ],
  "gap": 12,
  "type": "Col",
}
`;

exports[`overflowMenu minimal 1`] = `
{
  "align": "end",
  "items": [
    {
      "id": "a",
      "label": "A",
      "pressType": "chat.overflowMenu.itemPress",
    },
  ],
  "side": "bottom",
  "title": "More",
  "trigger": {
    "name": "dotsHorizontal",
    "size": 22,
    "type": "Icon",
  },
  "type": "Popover",
}
`;

exports[`overflowMenu full 1`] = `
{
  "align": "start",
  "items": [
    {
      "icon": "pencil",
      "id": "edit",
      "label": "Edit",
      "pressType": "custom.overflow",
    },
    {
      "danger": true,
      "disabled": true,
      "icon": "trash",
      "id": "remove",
      "label": "Remove",
      "pressType": "custom.overflow",
    },
  ],
  "side": "bottom",
  "title": "Options",
  "trigger": {
    "name": "menu",
    "size": 18,
    "type": "Icon",
  },
  "type": "Popover",
}
`;

exports[`composerBar minimal 1`] = `
{
  "align": "center",
  "children": [
    {
      "autoGrow": true,
      "multiline": true,
      "name": "message",
      "onChangeAction": {
        "payload": {},
        "type": "chat.composer.change",
      },
      "placeholder": "Message",
      "type": "TextField",
      "value": "",
    },
    {
      "iconStart": "arrow-up",
      "onClickAction": {
        "payload": {},
        "type": "chat.composer.send",
      },
      "size": "sm",
      "type": "Button",
      "variant": "solid",
    },
  ],
  "gap": 8,
  "type": "Row",
}
`;

exports[`composerBar full 1`] = `
{
  "align": "center",
  "children": [
    {
      "iconStart": "paperclip",
      "onClickAction": {
        "payload": {},
        "type": "chat.composer.attach",
      },
      "size": "sm",
      "type": "Button",
      "variant": "ghost",
    },
    {
      "autoGrow": true,
      "multiline": true,
      "name": "reply",
      "onChangeAction": {
        "payload": {},
        "type": "chat.composer.change",
      },
      "placeholder": "Reply…",
      "type": "TextField",
      "value": "hello",
    },
    {
      "disabled": true,
      "iconStart": "paper-plane",
      "onClickAction": {
        "payload": {},
        "type": "chat.composer.send",
      },
      "size": "sm",
      "type": "Button",
      "variant": "solid",
    },
  ],
  "gap": 8,
  "type": "Row",
}
`;

exports[`composerBar hides send button when showSend is false 1`] = `
{
  "align": "center",
  "children": [
    {
      "autoGrow": true,
      "multiline": true,
      "name": "message",
      "onChangeAction": {
        "payload": {},
        "type": "chat.composer.change",
      },
      "placeholder": "Message",
      "type": "TextField",
      "value": "",
    },
  ],
  "gap": 8,
  "type": "Row",
}
`;

exports[`messageBubble minimal 1`] = `
{
  "align": "start",
  "children": [
    {
      "color": undefined,
      "type": "Text",
      "value": "hi",
    },
  ],
  "gap": 2,
  "type": "Col",
}
`;

exports[`messageBubble full with markdown body 1`] = `
{
  "align": "end",
  "children": [
    {
      "color": "#666666",
      "type": "Caption",
      "value": "Alice",
      "weight": "semibold",
    },
    {
      "type": "Markdown",
      "value": "**bold** move",
    },
    {
      "align": "end",
      "children": [
        {
          "color": "#666666",
          "type": "Caption",
          "value": "12:30",
        },
        {
          "color": "#666666",
          "type": "Caption",
          "value": "sent",
        },
      ],
      "type": "Col",
    },
  ],
  "gap": 2,
  "type": "Col",
}
`;

exports[`messageBubble segments body with emphasis 1`] = `
{
  "align": "start",
  "children": [
    {
      "background": undefined,
      "color": "#222222",
      "type": "Text",
      "value": "plain ",
    },
    {
      "background": {
        "dark": "#fde047",
        "light": "#FFF200",
      },
      "color": "#222222",
      "type": "Text",
      "value": "match",
    },
    {
      "align": "start",
      "children": [
        {
          "color": "secondary",
          "type": "Caption",
          "value": "08:00",
        },
      ],
      "type": "Col",
    },
  ],
  "gap": 2,
  "type": "Col",
}
`;

exports[`voiceMessage minimal 1`] = `
{
  "align": "center",
  "background": {
    "dark": "#3b9bff",
    "light": "#0a7cff",
  },
  "children": [
    {
      "accent": {
        "dark": "#3b9bff",
        "light": "#0a7cff",
      },
      "onAccent": {
        "dark": "#ffffff",
        "light": "#ffffff",
      },
      "onPlayAction": {
        "payload": {
          "src": "https://media.example/v.mp3",
        },
        "type": "chat.voice.play",
      },
      "src": "https://media.example/v.mp3",
      "type": "AudioPlayer",
      "waveform": true,
    },
  ],
  "maxWidth": 280,
  "minWidth": 200,
  "padding": {
    "x": 9,
    "y": 7,
  },
  "radius": "2xl",
  "type": "Row",
}
`;

exports[`voiceMessage full 1`] = `
{
  "align": "center",
  "background": "#123456",
  "children": [
    {
      "accent": "#123456",
      "barCount": 3,
      "bars": [
        1,
        4,
        2,
      ],
      "duration": 12,
      "onAccent": "#ffffff",
      "onPlayAction": {
        "payload": {
          "src": "https://media.example/v.mp3",
        },
        "type": "chat.voice.play",
      },
      "src": "https://media.example/v.mp3",
      "type": "AudioPlayer",
      "waveform": true,
    },
  ],
  "maxWidth": 280,
  "minWidth": 200,
  "padding": {
    "x": 9,
    "y": 7,
  },
  "radius": "2xl",
  "type": "Row",
}
`;

exports[`videoMessage minimal 1`] = `
{
  "background": "#000",
  "children": [
    {
      "controls": true,
      "src": "https://media.example/v.mp4",
      "type": "VideoPlayer",
    },
  ],
  "radius": "md",
  "type": "Box",
  "width": 220,
}
`;

exports[`videoMessage full 1`] = `
{
  "background": "#000",
  "children": [
    {
      "controls": true,
      "poster": "https://img.example/poster.png",
      "src": "https://media.example/v.mp4",
      "type": "VideoPlayer",
    },
  ],
  "radius": "md",
  "type": "Box",
  "width": 300,
}
`;

exports[`filterChips minimal 1`] = `
{
  "align": "center",
  "children": [
    {
      "children": [
        {
          "align": "center",
          "background": "#eeeeee",
          "children": [
            {
              "color": "#333333",
              "size": "md",
              "truncate": true,
              "type": "Text",
              "value": "All",
            },
          ],
          "height": 26,
          "padding": {
            "x": 9,
            "y": 2,
          },
          "radius": "full",
          "type": "Row",
        },
      ],
      "onClickAction": {
        "payload": {
          "value": "all",
        },
        "type": "chat.filter.select",
      },
      "type": "Pressable",
    },
  ],
  "gap": 8,
  "type": "Row",
  "wrap": "wrap",
}
`;

exports[`filterChips full 1`] = `
{
  "align": "center",
  "children": [
    {
      "children": [
        {
          "align": "center",
          "background": "#000000",
          "children": [
            {
              "color": "#ffffff",
              "size": "md",
              "truncate": true,
              "type": "Text",
              "value": "All",
            },
          ],
          "height": 26,
          "padding": {
            "x": 9,
            "y": 2,
          },
          "radius": "full",
          "type": "Row",
        },
      ],
      "onClickAction": {
        "payload": {
          "value": "all",
        },
        "type": "custom.filter",
      },
      "type": "Pressable",
    },
    {
      "children": [
        {
          "align": "center",
          "background": "#eeeeee",
          "children": [
            {
              "color": "#333333",
              "size": "md",
              "truncate": true,
              "type": "Text",
              "value": "Unread",
            },
          ],
          "height": 26,
          "padding": {
            "x": 9,
            "y": 2,
          },
          "radius": "full",
          "type": "Row",
        },
      ],
      "onClickAction": {
        "payload": {
          "value": "unread",
        },
        "type": "custom.filter",
      },
      "type": "Pressable",
    },
  ],
  "gap": 8,
  "type": "Row",
  "wrap": "wrap",
}
`;
